--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -274,7 +274,8 @@
                             <div class="imageDiv">
                               <img src="assets/images/source-icos/drog_frop.svg">
                             </div>
-                            <div class="info_text" *ngIf="(selectedSourceType.resourceType !='importfaq')">Drag and drop file anywhere on this screen</div>
+                            <div class="info_text" *ngIf="(selectedSourceType.resourceType !='importfaq'&&selectedSourceType.resourceType !='')">Drag and drop file anywhere on this screen</div>
+                            <div class="info_text" *ngIf="(selectedSourceType.sourceType=='faq'&&selectedSourceType.resourceType =='')">Drag and drop a <strong>pdf file</strong> anywhere on this screen</div>
                             <div class="info_text" *ngIf="(selectedSourceType.resourceType ==='importfaq')">Drag and drop file anywhere in this section</div>
                             <div class="or-divider">- or -</div>
                             <div class="custom-file">
