--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
@@ -201,6 +201,7 @@
                         font-weight: normal;
                         font-size: 14px;
                         line-height: 20px;
+                        cursor:pointer;
                     }
                     .close-img{
                         height: 20px;                     
