--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -86,7 +86,7 @@
         }
     } 
     .body-top-content{
-        padding: 10px 0 10px;
+        // padding: 10px 0 10px;
         .question-content{
             .title-que{
                 color: #202124;
@@ -1195,4 +1195,9 @@
 }
 .alternate-add-plus-icon{
     width: 12px;
+}
+.question-content .bot-response-view-mode .desc-info {
+    padding: 0 0 15px!important;
+    margin-bottom: 15px!important;
+    border-bottom: 1px solid #bdc1c6!important;
 }
