--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -358,6 +358,12 @@
                                             margin-right: 7px;
                                         }
                                     }
+                                    &.is-selected{
+                                        background: #E7F1FF;
+                                        // .follow_up{
+                                        //     display: flex;
+                                        // }
+                                    }
                                     &.is-checked{
                                         background: #E7F1FF;
                                         .kr-sg-checkbox{
@@ -1743,4 +1749,8 @@
             line-height: 17px;
         }
     }
+}
+.px-12px{
+    padding-left:12px !important;
+    padding-right:12px !important;
 }
