--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -27,7 +27,7 @@
                 <div class="plan-details" *ngIf="currentSubscriptionPlan">
                   <div class="type-plan-sec">
                     <div class="type-plan">{{ currentSubscriptionPlan.subscription.planName || 'Free' }} </div>
-                    <div class="amount" *ngIf="currentSubscriptionPlan.subscription.planName != 'Free'">${{currentSubscriptionPlan.subscription.planAmount}}<span>/ month</span></div>
+                    <div class="amount" *ngIf="currentSubscriptionPlan.subscription.planName != 'Free'">${{currentSubscriptionPlan.subscription.planAmount}}<span>/ {{currentSubscriptionPlan.subscription.billingUnit=='Monthly'?'month':'year'}}</span></div>
                   </div>
                   <div class="plan-time">
                     <div class="started-title">{{currentSubscriptionPlan.subscription.planName=='Free'?'Started On':currentSubscriptionPlan.subscription.changesScheduledFor=='none'?'Renewal Date':currentSubscriptionPlan.subscription.status=='expired'?'End Date':'Valid till'}}</div>
@@ -58,15 +58,15 @@
             </div>
         </div>
 
-        <ng-container>
-          <div class="info-note">
+        <ng-container *ngIf="currentSubscriptionPlan&&currentSubscriptionPlan.subscription.planName=='Pro'&&currentSubscriptionPlan.subscription.changesScheduledFor=='downgrade'">
+          <div class="info-note" [ngClass]='{"d-none":proInfo}'>
             <div class="col-10 d-flex align-items-center p-0">
               <img src="assets/icons/Info-pdf.svg">
-              <span class="info-text">Your plan will be changed from Pro to Standard by the end of the billing cycle i.e. 18th April 2021</span>
+              <span class="info-text">Your plan will be changed from Pro to Standard by the end of the billing cycle i.e. {{(currentSubscriptionPlan&&currentSubscriptionPlan.subscription.endDate)| dateFormatPipe:'D MMMM YYYY'}}</span>
             </div>
             <div class="close-info col-2 p-0 text-right">            
               <span>Cancel request</span>
-              <img src="assets/icons/close-small.svg">
+              <img src="assets/icons/close-small.svg" (click)="proInfo=true">
             </div>
           </div>
         </ng-container>
