--- a/findly-builder/src/app/components/team-management/team-management.component.scss
+++ b/findly-builder/src/app/components/team-management/team-management.component.scss
@@ -135,9 +135,7 @@
         display: block;     
     }  
     .kr-sg-input-search{
-        display: inline-block;
-        width: 0px;
-        display: none;  
+        display: inline-block;  
         width: 300px;
         height: 20px;
         position: relative;
@@ -147,6 +145,29 @@
             display: block;
             width: 300px;
         }
+        .close-icon{
+          position: absolute;
+          right: 11px;
+          top: 12px;
+          cursor: pointer;
+      }
+      .input-search{
+          border: 1px solid #E4E5E7;                            
+          border-radius: 4px;
+          padding-left: 36px;
+          padding-right: 15px;
+          font-size: 14px;
+          &:focus{
+              border: 1px solid #1372ff;
+          }
+          &::placeholder{
+              color: #BDC1C6;
+          }
+      }
+      .search-icon{
+          left: 12px;
+          top: 10px;
+      }
     } 
     .seach-block{
         color: #202124;
